# dsp-tool-box-rs

./: Cargo.toml  README.md  build.rs  cbindgen.toml
src/: filtering.rs  lib.rs  modulation.rs  modulation_phase.rs
src/filtering/: one_pole.rs  one_pole_filter.rs  one_pole_simple.rs
src/modulation/: adsr.rs  phase.rs
tests/: adsr_test.rs  one_pole_filter_test.rs  phase_test.rs
