[package]
name = "dsp-tool-box-rs"
version = "0.1.0"
authors = ["René Hansen <rene@hansen-audio.de>"]
edition = "2018"

[build-dependencies]
cbindgen = "0.20.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["staticlib"]

[dependencies]
float-cmp ="0.9.0"